# control-libraries

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.base  Dockerfile.proto  LICENSE  README.md  build-test.sh  build.sh  dev-server.sh  doxygen.conf  index.html  run-demo-script.sh  run.sh  update_version.sh
demos/: CMakeLists.txt  Dockerfile  README.md  build.sh  run-demo-script.sh  run-demo.sh  run.sh
demos/control_loop_examples/: CMakeLists.txt  Dockerfile  README.md  run-demo.sh
demos/control_loop_examples/scripts/: robot_kinematics_control_loop.cpp  task_space_control_loop.cpp
demos/cpp_scripts/: robot_kinematics_control_loop.cpp  task_space_control_loop.cpp
demos/include/: franka_lwi_communication_protocol.h
demos/python_scripts/: robot_kinematics_control_loop.py  task_space_control_loop.py
demos/ros2_examples/: .dockerignore  CMakeLists.txt  Dockerfile  README.md  build.sh  package.xml  run-demo.sh
demos/ros2_examples/config/: update_bashrc
demos/ros2_examples/launch/: joint_space_torque_control.py  task_space_control_loop.py
demos/ros2_examples/rviz/: config_file.rviz
demos/ros2_examples/scripts/: joint_space_torque_control_loop.cpp  task_space_control_loop.cpp
demos/ros_examples/: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  package.xml  run-demo.sh
demos/ros_examples/config/: entrypoint.sh  update_bashrc
demos/ros_examples/launch/: joint_space_torque_control.launch  joint_space_velocity_control.launch  task_space_control_loop.launch
demos/ros_examples/rviz/: config_file.rviz
demos/ros_examples/scripts/: joint_space_torque_control.cpp  joint_space_velocity_control.cpp  task_space_control_loop.cpp
demos/scripts/: kinematics_control_loop.cpp  robot_kinematics_control_loop.cpp  task_space_control_loop.cpp  zmq_interface.cpp
protocol/: CMakeLists.txt  Dockerfile.protocol  README.md  build-test.sh  dev-server.sh  dev.sh  install.sh  main.cpp  run.sh
protocol/clproto_cpp/: CMakeLists.txt  Config.cmake.in  README.md  clproto.pc.in
protocol/clproto_cpp/include/: clproto.h
protocol/clproto_cpp/include/clproto/: decoders.h  encoders.h
protocol/clproto_cpp/src/: clproto.cpp  decoders.cpp  encoders.cpp
protocol/clproto_cpp/test/tests/: test_cartesian_space_proto.cpp  test_joint_space_proto.cpp  test_json.cpp  test_messages.cpp  test_packing.cpp  test_parameter_proto.cpp
protocol/protobuf/: Makefile  README.md  cartesian_state.proto
protocol/protobuf/proto/state_representation/: state.proto  state_message.proto
python/: .env  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.python  Pipfile  README.md  build-test.sh  dev-server.sh  entrypoint.sh  pyproject.toml  run.sh  setup.py
python/include/: clproto_bindings.h  controllers_bindings.h  dynamical_systems_bindings.h  parameter_container.h  py_controller.h  py_dynamical_system.h  py_parameter_map.h  robot_model_bindings.h  state_representation_bindings.h
python/source/: py_state_representation.cpp  state_representation_bindings.cpp
python/source/clproto/: bind_clproto.cpp  bind_clproto_parameters.cpp  clproto_bindings.cpp  clproto_bindings.h
python/source/common/: parameter_container.cpp
python/source/controllers/: bind_cartesian_controllers.cpp  bind_computational_space.cpp  bind_controller_type.cpp  bind_joint_controllers.cpp  bind_type.cpp  controllers_bindings.cpp
python/source/dynamical_systems/: bind_cartesian.cpp  bind_cartesian_ds.cpp  bind_ds_type.cpp  bind_joint.cpp  bind_joint_ds.cpp  dynamical_systems_bindings.cpp
python/source/robot_model/: bind_model.cpp  robot_model_bindings.cpp
python/source/state_representation/: bind_cartesian_space.cpp  bind_clproto.cpp  bind_geometry.cpp  bind_jacobian.cpp  bind_joint_space.cpp  bind_parameters.cpp  bind_state.cpp  state_representation_bindings.cpp  state_representation_bindings.h
python/test/: test_cartesian_pose.py  test_cartesian_state.py  test_clproto.py  test_geometry.py  test_joint_state.py  test_parameters.py  test_state.py
python/test/controllers/: test_compliant_twist.py  test_controller.py  test_dissipative_impedance.py  test_impedance.py  test_velocity_impedance.py
python/test/dynamical_systems/: test_cartesian_point_attractor.py  test_circular.py  test_ds.py  test_joint_point_attractor.py  test_ring.py
python/test/model/: test_model.py  test_model_dynamics.py  test_model_kinematics.py
python/test/robot/: test_jacobian.py  test_joint_state.py
python/test/space/: test_cartesian_pose.py  test_cartesian_state.py  test_spatial_state.py
python/test/state_representation/: test_parameters.py  test_state.py
python/tests/: cartesian_pose_test.py  cartesian_state_test.py  jacobian_test.py  test_cartesian_state.py  test_joint_state.py
source/: CMakeLists.txt  Config.cmake.in  Dockerfile.source  README.md  build-test.sh  build.sh  dev-server.sh  install.sh
source/controllers/: CMakeLists.txt  README.md  install.sh
source/controllers/src/: ControllerFactory.cpp  IController.cpp
source/controllers/tests/: testDissipativeImpedanceController.cpp  testImpedanceController.cpp  testVelocityImpedanceController.cpp
source/demos/: CMakeLists.txt
source/dynamical_systems/: CMakeLists.txt  README.md  install.sh
source/dynamical_systems/src/: Circular.cpp  DynamicalSystem.cpp  DynamicalSystemFactory.cpp  IDynamicalSystem.cpp  Linear.cpp  PointAttractor.cpp  Ring.cpp
source/dynamical_systems/tests/: testCircular.cpp  testLinear.cpp  test_circular.cpp  test_linear.cpp  test_ring.cpp
source/filters/: CMakeLists.txt  README.md
source/robot_model/: .gitignore  CMakeLists.txt  README.md  install.sh
source/robot_model/src/: Model.cpp
source/robot_model/tests/: testRobotModel.cpp  test_robot_model.cpp
source/state_representation/: .gitignore  CMakeLists.txt  README.md  install.sh
source/state_representation/src/: MathTools.cpp  State.cpp
source/state_representation/tests/: testCartesianState.cpp  testDualQuaternionState.cpp  testEllipsoid.cpp  testJacobian.cpp  testJointState.cpp  testParameter.cpp  testTrajectory.cpp  testUnits.cpp
(+5135 files in other folders)
