<?xml version="1.0"?>
<package format="2">
  <name>ros_examples</name>
  <version>0.0.0</version>
  <description>Control libraries demos included in a ROS package</description>
  <maintainer email="baptiste.busch@epfl.ch">"Baptiste Busch"</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
</package>
